<resources>
    <string name="app_name">Voices</string>

    <!-- Splash -->
    <string name="splash_voices_intro">Support the groups and causes you care about.</string>
    <string name="splash_button">Get Started</string>

    <!-- Group Detail -->
    <string name="follow_group">Follow Group</string>

    <!--Toolbar-->
    <string name="settings">Settings</string>
    <string name="findreps">My Reps</string>
    <string name="takeaction">My Actions</string>
    <string name="toolbar_all_groups_info">Select A Group To Learn More</string>
    <string name="toolbar_add_home_address">Edit Address</string>

    <!--Representatives Tab-->
    <string name="search_text">Find Your Reps</string>
    <string name="representatives_onboarding">Add your address to save your reps</string>
    <string name="add_address">Add Address</string>
    <string name="no_address">Voices does not share your address with anyone.</string>
    <string name="representatives_error_message">Officials are not available in your area yet.</string>
    <string name="local_not_yet_error">Local reps are not available in this area yet.</string>
    <string name="reps_fetch_error">Enter your address: use the search button above to find your reps.</string>

    <!--Reps Details Dialog-->
    <string name="details_title">More Info</string>
    <string name="nyc_election_date">November 7, 2017</string>
    <string name="nyc_title">Council Member</string>
    <string name="party">Party:&#160;</string>
    <string name="district">District:&#160;</string>
    <string name="next_election">Next Election:&#160;</string>
    <string name="not_available">N/A</string>
    <string name="gov_title">Governor</string>
    <string name="election_upcoming">Election Upcoming!</string>

    <!--No Contact Info Dialog-->
    <string name="no_info_title">Oops</string>
    <string name="no_info_text_1">This legislator hasn\'t given us this contact information.</string>
    <string name="no_info_text_2">Orange buttons indicate available contact information.</string>
    <string name="no_info_text_3">Gray buttons indicate unavailable contact information.</string>
    <string name="call_instead">Please consider calling them instead.</string>
    <string name="email_instead">Please consider emailing them instead.</string>

    <!--Email Dialog-->
    <string name="sure_text">Are you sure you want to email&#160;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Actions Tab-->
    <string name="actions">Actions</string>
    <string name="no_follow_actions">To receive actions from advocacy groups, tap the + button above to follow groups.</string>
    <string name="no_follow_actions_top">You haven\'t received any actions yet.</string>
    <string name="contact_representatives">Contact Reps</string>
    <string name="important">Why it\'s important</string>
    <string name="say">What to say (Call Script)</string>
    <string name="share">Share action</string>

    <!--Groups Tab-->
    <string name="my_groups">My Groups</string>
    <string name="no_follow_groups">To follow groups, tap the + button above.</string>
    <string name="no_follow_groups_top">You don\'t follow any groups yet.</string>
    <string name="groups_fetch_error">"Server/Network Error! Attempting to fetch groups again..."</string>

    <!--Groups Dialog-->
    <string name="button_learnmore">Take Action</string>
    <string name="follow_groups_text">Follow This Group</string>
    <string name="following_groups_text">Following▾</string>
    <string name="policy_positions_text">Policy Positions</string>
    <string name="follow_question">Are you sure you want to unfollow this group?</string>
    <string name="unfollow">Unfollow Group</string>
    <string name="cancel">Cancel</string>
    <string name="visit_website">Visit Website</string>

    <!--Instructions Dialog-->
    <string name="instructions_title">To View Your Representatives</string>
    <string name="instructions_text_1">Use the search bar to find representatives by address or swipe down to fetch representatives at your current location.</string>
    <string name="instructions_text_2">Swipe right to see state and local representatives.</string>
    <string name="got_it_button_text">Got It!</string>

    <!--Info Dialog-->
    <string name="response_title">Pro Tips</string>
    <string name="response_1">Why Call</string>
    <string name="response_2">Calling is the most effective way to get the government to listen to you, according to political staffers. Calls are taken more seriously and have a greater impact than emails or social media.</string>
    <string name="response_3">What To Say</string>
    <string name="response_4">Hello my name is [your name] and I am a constituent. I would like the representative to [support or oppose] [an issue that you care about] and I will be voting in the next election.</string>
    <string name="response_5">What To Expect</string>
    <string name="response_6">You will likely talk to an intern or staffer dedicated to constituent services. They will take down your name, opinion and relay that information to your representative. Many offices tally the number of constituents that call to support or oppose various issues.</string>
    <string name="info_close_button">X</string>

    <!--Address Dialog-->
    <string name="address_title">Privacy Is A Human Right</string>
    <string name="address_body">Voices does not share your address with anyone.</string>
    <string name="ok">OK</string>

    <!--Leave App Dialog-->
    <string name="leave_title">Leave Voices</string>
    <string name="leave_message">Are you sure you want to leave the voices app?</string>

    <!--API Keys-->
    <string name="google_places_api_key">AIzaSyAT87ms7SyySJIG5OrimyKbrHAZRQ2qgcI</string>
    <string name="sunlight_api_key">939e3373a07c468bac51ddd604ebba1f</string>
    <string name="open_states_api_key">e39ba83d7c5b4e348db144c4b4c33108</string>
    <string name="firebase_endpoint">https://voices-430ae.firebaseio.com</string>
    <string name="issues">Issues</string>
    <string name="group_detail_less">Group Detail Less</string>
    <string name="group_detail_more">Group Detail More</string>
    <string name="group_image">Group Image</string>
    <string name="group_name">Group Name</string>
</resources>