<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

   <com.mobilonix.voices.util.AvenirTextView
        android:id="@+id/response_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/response_title"
        android:textSize="20dp"
        android:background="@color/voices_orange"
        android:textColor="#FFF"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">
        <com.mobilonix.voices.util.AvenirTextView
            android:id="@+id/response_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/response_1"
            android:textColor="#000000" />
        <com.mobilonix.voices.util.AvenirTextView
            android:id="@+id/response_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/response_2"
            android:textColor="@color/voices_orange"/>
    </LinearLayout>
    <com.mobilonix.voices.util.AvenirTextView
            android:id="@+id/response_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/response_3"
            android:textColor="#000000" />
    <com.mobilonix.voices.util.AvenirTextView
        android:id="@+id/response_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/response_4"
        android:textColor="#000000"/>

    <com.mobilonix.voices.util.AvenirTextView
        android:id="@+id/response_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/response_5"
        android:textColor="@color/voices_orange"/>'

    <com.mobilonix.voices.util.AvenirTextView
        android:id="@+id/response_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/response_6"
        android:textColor="@color/voices_orange"/>

    <com.mobilonix.voices.util.AvenirTextView
        android:id="@+id/response_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/response_7"
        android:textColor="#000000"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">
    </LinearLayout>
</LinearLayout>