<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.mobilonix.voices.util.AvenirTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/no_info_title"/>
    <com.mobilonix.voices.util.AvenirTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/no_info_text_1"/>
    <com.mobilonix.voices.util.AvenirTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/consider_text"/>
    <com.mobilonix.voices.util.AvenirTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/no_info_text_2"/>
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/phone_icon"
        android:tint="@color/voices_orange"
        android:layout_gravity="center"/>
    <com.mobilonix.voices.util.AvenirTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/no_info_text_3"/>
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/phone_icon"
        android:tint="@color/light_grey"
        android:layout_gravity="center"/>
    <com.mobilonix.voices.util.AvenirButton
        android:id="@+id/got_it_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="#FFF"
        android:text="@string/got_it_button_text"/>
</LinearLayout>