<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mobilonix.voices.util.AvenirTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/instructions_title"
        android:text="@string/instructions_title"/>

    <com.mobilonix.voices.util.AvenirTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/instructions_text"
        android:text="@string/instructions_text_1"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/swipe_down"/>

    <com.mobilonix.voices.util.AvenirTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/instructions_text_2"
        android:text="@string/instructions_text_2"/>

    <com.mobilonix.voices.util.AvenirButton
        android:id="@+id/got_it_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:textSize="15sp"
        android:textColor="#FFF"
        android:text="@string/got_it_button_text"/>
</LinearLayout>