<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="225dp"
        android:layout_height="225dp">
        <com.mobilonix.voices.util.AvenirTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="17dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/follow_question"/>
        <com.mobilonix.voices.util.AvenirButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFF"
            android:text="@string/unfollow"
            android:id="@+id/unfollow_button"/>
        <com.mobilonix.voices.util.AvenirButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFF"
            android:text="@string/cancel"
            android:id="@+id/cancel_button"/>
    +</LinearLayout>