<?xml version="1.0" encoding="utf-8"?>
<com.mobilonix.voices.groups.ui.GroupDetailContainer xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/group_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">


        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:id="@+id/group_detail_collapsing_tb"
                android:fitsSystemWindows="true">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/group_detail_group_image"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/rounded_button_white_background_orange_border"
                            android:contentDescription="@string/group_image" />

                        <TextView
                            android:id="@+id/group_detail_group_name_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/app_name"
                            app:layout_constraintLeft_toLeftOf="@+id/group_detail_group_image"
                            app:layout_constraintRight_toRightOf="@+id/group_detail_group_image"
                            app:layout_constraintTop_toBottomOf="@+id/group_detail_group_image" />

                        <TextView
                            android:id="@+id/group_detail_visit_site_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/visit_website"
                            android:textColor="#1A8CFF"
                            app:layout_constraintLeft_toLeftOf="@+id/group_detail_group_image"
                            app:layout_constraintRight_toRightOf="@+id/group_detail_group_image"
                            app:layout_constraintTop_toBottomOf="@+id/group_detail_group_name_tv" />

                        <TextView
                            android:id="@+id/group_detail_follow_group_button"
                            android:layout_width="250dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/rounded_button"
                            android:gravity="center"
                            android:text="@string/follow_group"
                            android:textColor="@color/white"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/group_detail_visit_site_button" />

                        <com.mobilonix.voices.util.AvenirTextView
                            android:id="@+id/group_detail_description_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:maxLines="3"
                            android:textSize="20sp"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/view2" />

                        <ImageButton
                            android:id="@+id/group_detail_less_button"
                            android:layout_width="50dp"
                            android:layout_height="37dp"
                            android:layout_marginTop="8dp"
                            android:background="@null"
                            android:scaleType="fitXY"
                            android:scaleY="1.50"
                            android:tint="@color/voices_orange"
                            android:visibility="gone"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/group_detail_description_tv"
                            app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
                            android:contentDescription="@string/group_detail_less" />

                        <ImageButton
                            android:id="@+id/group_detail_more_button"
                            android:layout_width="50dp"
                            android:layout_height="37dp"
                            android:layout_marginTop="8dp"
                            android:background="@null"
                            android:scaleType="fitXY"
                            android:scaleY="1.50"
                            android:tint="@color/voices_orange"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/group_detail_description_tv"
                            app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
                            android:contentDescription="@string/group_detail_more" />

                        <view
                            android:id="@+id/view2"
                            class="android.support.v4.widget.Space"
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginLeft="32dp"
                            android:layout_marginRight="32dp"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="24dp"
                            android:background="@android:color/black"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/group_detail_follow_group_button" />


                    </android.support.constraint.ConstraintLayout>


                </android.support.design.widget.CollapsingToolbarLayout>

                <android.support.design.widget.TabLayout
                    android:id="@+id/group_detail_tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_button_white_background_orange_border"
                    android:paddingBottom="1dp"
                    android:paddingEnd="2dp"
                    android:paddingStart="2dp"
                    android:paddingTop="1dp"
                    app:tabBackground="@drawable/tab_selected_color"
                    app:tabIndicatorColor="@null"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextColor="@color/voices_orange">

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/issues" />

                    <android.support.design.widget.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actions" />
                </android.support.design.widget.TabLayout>


            </android.support.design.widget.AppBarLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/issues_list_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:nestedScrollingEnabled="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    tools:listitem="@layout/policy_list_item"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/actions_rv"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/groups_item" />
            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.CoordinatorLayout>




</com.mobilonix.voices.groups.ui.GroupDetailContainer>
